web/views/varia.css
.checked {
    color: orange;
}
  a:link {color: SteelBlue;}
  a:visited {color: gray;}
  .web2py-menu-active {border: 2px solid gray;
                       border-radius: 12px;}
label {
    font-weight: normal !important;
}

.check {
    width: 1%;
    white-space: nowrap;
}
.name {
    width: 10%;
    white-space: nowrap;
}
.diff {
    width: 12%;
    white-space: nowrap;
}
.desc {
    width: 33%;
}
.rooms {
    width: 33%;
}
.full {
    width: 100%;
}
.threequarter {
    width: 75%;
}
.half {
    width: 50%;
}
.third {
    width: 33%;
}
.quarter {
    width: 25%;
}
.center {
    text-align: center;
}
.right {
    text-align: right;
}
.nopadding {
    background: linear-gradient(to right, #ddd, #fff);
    padding-left: 10px;
    padding-right: 0px;
    padding-top: 5px;
    padding-bottom: 5px;
    position: relative;
    left: -0.2em;
}
.linethrough {
    text-decoration: line-through;
}

.fixed {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    background-color: #ddd;
    width: 100%;
    z-index: 100;
    border-bottom: 2px solid #666;
}

body {
    padding-top: 0px;
    min-width: 640px;
}

input, .none {
}

.fill {
    width:100%;
    padding-left:0px;
    padding-right:0px;
}

.menuTable {
    background-color: #333;
}

.menu {
    width: 100%;
    color: #eee;
    text-align: center;
}

a.menu:link {
    color: #eee;
    font-weight: bold;
}
a.menu:visited {
    color: #eee;
    font-weight: bold;
}

.menu_selected {
    background: linear-gradient(to right, #333, #5777bf, #5777bf, #333);
    color: #eee;
    text-align: center;
    font-weight: bold;
}

a.menu_selected:link {
    color: #eee;
    font-weight: bold;
}
a.menu_selected:visited {
    color: #eee;
    font-weight: bold;
}

.filldropdown {
    width:100%;
    padding-left:0px;
    padding-right:0px;
}

table {
    border-collapse: collapse;
}

th {
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 0px;
    padding-bottom: 0px;
}

td {
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 0px;
    padding-bottom: 0px;

    border-bottom: 1px solid #ddd;
}

h3, form {
    margin: 0.1em;
}

h2 {
    margin-top: 0.3em;
    margin-bottom: 0.3em;
}
.paddingleft {
    padding-left: 10px;
}

p {
    margin: 0.5em;
}

/* https://www.w3schools.com/howto/howto_css_two_columns.asp */
* {
    box-sizing: border-box;
}
.column {
    float: left;
    width: 50%;
    padding-left: 10px;
}
.columnThird {
    float: left;
    width: 33%;
    padding-left: 10px;
}
.row:after {
    content: "";
    display: table;
    clear: both;
}
@media (max-width: 975px) {
    .column {
        width: 100%;
    }
    .columnThird {
        width: 100%;
    }
}
.container-fluid {
    padding-left: 0px;
    padding-right: 0px;
}
.col-md-12 {
    padding-left: 0px;
    padding-right: 0px;
}
.btn {
    padding: 0.2em 1.5em;
}
.popover-content {
    text-align: left;
}
.popover-title {
    text-align: center;
}
.popover {
    max-width: 350px;
    max-height: 95vh;
    overflow-y: scroll;
    position: fixed;
}
.buttonBack {
    background-color: lightblue;
}
.buttonRandom {
    width: 40%;
    padding-top: 1em;
    padding-bottom: 1em;
    font-size: 18px;
    margin-left: 30%;
    margin-right: 30%;
    margin-top: 1em;
}
.square {
    border-style: solid;
}
.center_img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
}
.button_a {
    background-position: 25% 75%;
}
.controller_container {
    position: relative;
}
.controller_a {
    position: absolute;
    left: 69%;
    top: 57%;
    z-index: 2;
}
.controller_b {
    position: absolute;
    left: 64%;
    top: 70%;
    z-index: 2;
}
.controller_x {
    position: absolute;
    left: 63%;
    top: 44%;
    z-index: 2;
}
.controller_y {
    position: absolute;
    left: 58%;
    top: 57%;
    z-index: 2;
}
.controller_l {
    position: absolute;
    left: 32%;
    top: 17%;
    z-index: 2;
}
.controller_r {
    position: absolute;
    left: 62%;
    top: 17%;
    z-index: 2;
}
.controller_s {
    position: absolute;
    left: 42%;
    top: 62%;
    z-index: 2;
}
.controller_moonwalk {
    position: absolute;
    left: 46%;
    top: 40%;
    z-index: 2;
}
.presetform {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}
/* Style the tab */
.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
}

/* Style the buttons that are used to open the tab content */
.tab button {
    background-color: inherit;
    color: #000;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
}

/* Change background color of buttons on hover */
.tab button:hover {
    background-color: #ddd;
    color: #000;
}

/* Create an active/current tablink class */
.tab button.active {
    background-color: #ccc;
    color: #000;
}

/* Style the tab content */
.tabcontent {
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
    margin-bottom: 1em;
}
.tabcontent {
    animation: fadeEffect 1s; /* Fading effect takes 1 second */
}

/* Go from zero to full opacity */
@keyframes fadeEffect {
    from {opacity: 0;}
    to {opacity: 1;}
}
.grey {
    background-color: #f1f1f1;
}
.locName {
    width: 25%;
}
.area {
    width: 10%;
}
.subarea {
    width: 15%;
}
.item {
    width: 5%;
}
.difficulty {
    width: 5%;
}
.knowsUsed {
    width: 20%;
}
.itemsUsed {
    width: 20%;
}
.small {
    padding: 0;
    margin: 0;
}
.dice_rotate {
    transform: rotate(30deg);
    font-size: 150%;
    display: inline-block;
    margin: 0.1em;
}


.random {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
}
.random button {
    background-color: inherit;
    color: #000;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 0.1em 0.1em;
    transition: 0.3s;
}
.random button:hover {
    background-color: #ddd;
    color: #000;
}
.random button:focus {
    background-color: inherit;
    color: #000;
}
.random button.active {
    background-color: #ccc;
    color: #000;
}
.main-container {
    margin-top: 0px;
}
.main {
    padding-left: 0.5em;
    padding-right: 0.5em;
    margin-bottom: 5em;
    margin-top: 2em;
    position: relative;
}
body {
    margin-bottom: 0px;
}

/* Style the tab */
.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
}

/* Style the buttons that are used to open the tab content */
.tab button {
    background-color: inherit;
    color: #000;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 1.2em 0.25em;
    transition: 0.3s;
}

/* Change background color of buttons on hover */
.tab button:hover {
    background-color: #ddd;
    color: #000;
}

/* Create an active/current tablink class */
.tab button.active {
    background-color: #ccc;
    color: #000;
}

/* Style the tab content */
.tabcontent {
    padding: 0.5em 0.5em;
    border: 1px solid #ccc;
    border-top: none;
}
.tabcontent {
    animation: fadeEffect 1s; /* Fading effect takes 1 second */
}

/* Go from zero to full opacity */
@keyframes fadeEffect {
    from {opacity: 0;}
    to {opacity: 1;}
}
.disabledText {
    color: grey;
    font-style: italic;
}
.hidden {
    display: none;
}

